@@ -1,7 +1,8 @@
 # frozen_string_literal: true
 
 if !defined?(JRUBY_VERSION) && RUBY_VERSION < '2.7'
-require 'grpc'
+  require 'grpc'
+  
   module ElasticAPM
     RSpec.describe GRPC, :intercept do
       class GreeterServer < Helloworld::Greeter::Service
@@ -43,6 +44,11 @@ require 'grpc'
           expect(span.name).to eq('/helloworld.Greeter/SayHello')
           expect(span.type).to eq('external')
           expect(span.subtype).to eq('grpc')
+          expect(span.context.destination.type).to eq('external')
+          expect(span.context.destination.name).to eq('grpc')
+          expect(span.context.destination.resource).to eq('localhost:50051')
+          expect(span.context.destination.address).to eq('localhost')
+          expect(span.context.destination.port).to eq('50051')
 
           server.stop
           thread.kill
